--- a/Project/src/templates/login.html
+++ b/Project/src/templates/login.html
@@ -19,7 +19,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-                <form class="login100-form validate-form">
+                <form class="login100-form validate-form" action="/login" method="POST">
 					<span class="login100-form-title">
 						Login
 					</span>
@@ -32,15 +32,6 @@
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
 						<input class="input100" type="password" name="pass" placeholder="Password">
 						<span class="focus-input100"></span>
-					</div>
-
-                    <div class="text-center p-t-5">
-						<span class="txt1">
-							Forgot
-						</span>
-						<a class="txt2" href="#">
-							Password?
-						</a>
 					</div>
 
 					<div class="container-login100-form-btn">
