--- a/Project/src/templates/routine.html
+++ b/Project/src/templates/routine.html
@@ -244,7 +244,7 @@
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <div class="checkboxButton">
-                        <input id="workoutID" type="checkbox" name="workoutName" value="workout" />
+                        <input id="workoutID" type="checkbox" name="workoutName" value="{{e.exerciseName}}" />
                         <img src= {{e.example}} alt="Workout Demo" style="width:150px;height:150px;">
                         <p class="img_name"  style="font-size:20px; text-align:center;">
                         <br>
@@ -277,9 +277,16 @@
     <label for="sets"><b>Sets</b></label>
     <input type="text" placeholder="Enter the amount of sets" name="sets" required>
 
-    <button type="submit" class="btn" >Submit</button> <br>
+    <button type="button" class="btn" >Submit</button> <br>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
   </form>
+</div>
+
+<div class="content">
+  <h1>Your Workout Routines</h1>
+    <ul class="content-list"> </ul>
+
+
 </div>
 
 <script>
@@ -290,6 +297,22 @@ function openForm() {
 function closeForm() {
   document.getElementById("myForm").style.display = "none";
 }
+
+/*CODE FOR SUBMIT BUTTON */
+$(document).ready(function(){
+
+    $('.btn').click(function(){
+     $('input[name=workoutName]:checked').parent().hide();
+    var list = $('.content ul');
+    list.empty();
+    $('input[name=workoutName]:checked').each(function(){
+      var item = $('<li>');
+      item.html($(this).val());
+      list.append(item);
+    });
+
+  });
+});
 </script>
 
 </body>
