--- a/Project/src/templates/routine.html
+++ b/Project/src/templates/routine.html
@@ -272,10 +272,10 @@
     </p>
 
     <label for="reps"><b>Reps</b></label>
-    <input type="text" placeholder="Enter the amount of reps" name="reps" required>
+    <input type="text" placeholder="Enter the amount of reps" id="reps" name="reps" required>
 
     <label for="sets"><b>Sets</b></label>
-    <input type="text" placeholder="Enter the amount of sets" name="sets" required>
+    <input type="text" placeholder="Enter the amount of sets" id="sets" name="sets" required>
 
     <button type="button" class="btn" >Submit</button> <br>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
@@ -308,12 +308,14 @@ $(document).ready(function(){
     $('input[name=workoutName]:checked').each(function(){
 
       var item = $('<div>');
-      item = $(this).parent().clone();
+      item = $(this).parents(".flip-card").clone();
       list.append(item);
 
-      /*var workouts = $('.flip-card').contents();
-       //workouts.html($(this).val());
-       list.append(workouts);*/
+      var sets = $("#sets").val();
+      var reps = $("#reps").val();
+
+      list.append("Reps: ", reps);
+      list.append("Sets: ", sets);
 
     });
 
