--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -95,10 +95,11 @@ body {
   border: none;
   background-color: inherit;
   padding: 14px 14px;
-  font-size: 16px;
   cursor: pointer;
   display: inline-block;
   border-radius: 10px;
+  font-size: 17px;
+  color: #666666
 }
 
 .linkBtn:hover {background: #eee;}
