--- a/Project/src/static/css/main.css
+++ b/Project/src/static/css/main.css
@@ -410,8 +410,8 @@ iframe {
 }
 
 .btn {
-  font-family: Montserrat-Bold;
-  font-size: 15px;
+  font-family: Montserrat;
+  font-size: 17px;
   line-height: 1.5;
   color: #fff;
   text-transform: uppercase;
@@ -424,7 +424,6 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 0 25px;
-
 }
 
 
