--- a/Project/src/templates/routine.html
+++ b/Project/src/templates/routine.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
-        .openButton {
+        .openButton  {
               border: none;
               background-color: inherit;
               padding: 14px 14px;
@@ -27,18 +27,19 @@
 
         .openButton:hover {background: #eee;}
 
-        /* Button used to open the contact form - fixed at the bottom of the page
-        .open-button {
-          background-color: #555;
-          color: white;
-          padding: 16px 20px;
-          border: none;
-          cursor: pointer;
-          opacity: 0.8;
-          position: absolute;
-          margin: auto;
+         /*DELETE AND UPDATE BUTTON CODE STARTS HERE*/
+         .deleteButton, .updateButton  {
+              border: none;
+              background-color: inherit;
+              padding: 14px 14px;
+              font-size: 16px;
+              cursor: pointer;
+              display: inline-block;
+              border-radius: 10px;
+            }
 
-        }*/
+         .deleteButton:hover {background: #eee;}
+         .updateButton:hover{background: #eee;}
 
         /* The popup form - hidden by default */
         .form-popup {
@@ -271,14 +272,22 @@
         </div>
     </p>
 
-    <button type="button" class="btn" >Submit</button> <br>
+    <button type="button" class="btn" id="submitRoutine">Submit</button> <br>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+
   </form>
 </div>
 
 <div class="content">
-  <h1>Your Workout Routines</h1>
+  <h3>Your Workout Routines</h3>
+    <br>
     <div class="card-container"> </div>
+
+    <p style="text-align: center;">
+        <button type="button" class="deleteButton"  id="delete" style="display:show"> Delete </button>
+        <button type="button" class="updateButton" id="update" style="display:show"> Update </button>
+    </p>
+
 </div>
 
 <script>
@@ -292,8 +301,7 @@ function closeForm() {
 
 /*CODE FOR SUBMIT BUTTON */
 $(document).ready(function(){
-
-    $('.btn').click(function(){
+    $('#submitRoutine').click(function(){
      $('input[name=workoutName]:checked').parent().show();
 
     var list = $('.content div');
@@ -309,13 +317,17 @@ $(document).ready(function(){
       var sets = prompt("Please enter the amount of Sets for: ", $(this).val());
 
       list.append("Reps: ", reps);
-      list.append(" Sets: ", sets);
+      list.append("\nSets: ", sets);
 
+    /* DELETE CODE */
+      $(".deleteButton").on("click", function(){
+       /*$(item).closest('div').remove(); THIS REMOVES THE PICTURE ALONE */
+       $(list).remove();
     });
 
+    });
   });
 });
-
 </script>
 
 </body>
