--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,59 +1,46 @@
-<!--TODO: Everything lol -->
-
 <!DOCTYPE html>
-<html lang="en" class="no_background_image">
+<html lang="en">
 <head>
 	<title> About Us | Best Fit </title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--NAV BAR STYLE SHEET -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 	<!--NAVIGATION SEARCH ICON CODE -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<style>
- /* Moved to main.css*/
-</style>
+<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="../static/images/icons/favicon.ico"/>
+	<link rel="stylesheet" type="text/css" href="../static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../static/css/util.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
+<!--===============================================================================================-->
 
 </head>
-<body class=" landing">
+<body class=" logo_background">
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Best Fit</a>
+      <a class="navbar-brand" href="/">Best Fit</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="home">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="workouts">Workouts and Programs</a></li>
       <li><a href="routine">Workout Routines</a></li>
-      <li><a href="aboutus">About Us</a></li>
-	  <!--
-        <li>
-    <form class="newsearch" style="float:right">
-        <input type="text" placeholder="Search workouts ...">
-        <button type="submit">Search</button>
-    </form></li> -->
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-		<li><a href="#" style="font-size:15px"><span class="fa fa-fw fa-search"></span> Search</a> </li> <!--New Search Bar Code -->
+      <li class="active"><a href="aboutus">About Us</a></li>
     </ul>
   </div>
 </nav>
 
-<br>
-
-<h1> About Us
-    <form class="search-wrapper cf" style="float:right">
-        <input type="text" placeholder="Search here ..." required style="box-shadow: none;">
-        <button type="submit">Search</button>
-    </form></h1>
-
+<br>When BestFit first started out, our main focus was mental health.
+<br>The strain seen on a daily in this pandemic drove us to try to aid students.
+<br> The transition to online classes,online finals, self isolation and the pandemic pushed us into action to help students maintain a level of stability in these trying times. This gave us the motivation to turn hard work and inspiration into to a web application.
+<br> We  have now deployed our first erb application to promote physical and mental health and hope to add more to that category.
+<br> We hope you enjoy our products as much as we enjoy offering them to you.
 </body>
 </html>
