--- a/templates/error.html
+++ b/templates/error.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  
+
 	<!--NAVIGATION SEARCH ICON CODE -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -34,12 +34,11 @@
       <li><a href="routine">Workout Routines</a></li>
       <li><a href="aboutus">About Us</a></li>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-    </ul>
   </div>
 </nav>
+<h4><br>As you can see, there's nothing here.
+    <br>That means something went wrong.
+<br>Kindly pressing the back button in your browser and try again, or something. </h4>
 
 </body>
 </html>
