--- a/templates/login.html
+++ b/templates/login.html
@@ -41,7 +41,7 @@
 					</div>
 
 					<div class="text-center p-t-12">
-						<a class="txt2" href="signup.html">
+						<a class="txt2" href="signup">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
