--- a/templates/routine.html
+++ b/templates/routine.html
@@ -272,19 +272,37 @@
   </form>
 </div>
 
+<form action="/routine" method="POST">
 <div class="content">
   <h3>Your Workout Routines</h3>
     <br>
-    <div class="card-container"> </div>
+
+    <h4 id="routineName" name="Routine Name" > </h4>
+    <h4 id="routineID" name="Routine ID" > </h4>
+
+    <div class="card-container" id="currentRoutine" >
+    </div>
 
     <p style="text-align: center;">
         <button type="button" class="deleteButton"  id="delete" style="display:show"> Delete </button>
         <button type="button" class="updateButton" id="update" style="display:show"> Update </button>
+        <button type="submit" class="updateButton" id="saveRoutine" style="display:show" onclick="getInfo()"> Save Routine </button>
     </p>
 
 </div>
+</form>
 
 <script>
+function getInfo() {
+  var workoutName = prompt("Please enter a Workout Name");
+  var workoutID = prompt("Please enter a Workout ID");
+  if (workoutName != null && workoutID != null) {
+    document.getElementById("routineName").innerHTML = workoutName;
+    document.getElementById("routineID").innerHTML = workoutID;
+
+  }
+}
+
 function openForm() {
   document.getElementById("myForm").style.display = "block";
 }
@@ -318,6 +336,7 @@ $(document).ready(function(){
        /*$(item).closest('div').remove(); THIS REMOVES THE PICTURE ALONE */
        $(list).remove();
     });
+
 
     });
   });
