--- a/templates/workouts.html
+++ b/templates/workouts.html
@@ -138,7 +138,7 @@ body {
      <p>
         <br> <br>
         <form class="login100-form validate-form" action="/routine" method="GET" style="margin: auto;">
-            <button class="linkBtn" onclick='/routine.html'> Create a New Workout Routine </button>
+            <button class="linkBtn" > Create a New Workout Routine </button>
         </form>
     </p>
 
