--- a/templates/routine.html
+++ b/templates/routine.html
@@ -213,8 +213,6 @@
 
     <p style="text-align: center">
         <br> <br>
-        <!--<button class="linkBtn" onclick="window.location.href='routine.html';"> Create a New Workout Routine </button> -->
-        <!--<a href="routine.html" class="button">Click Here</a> -->
         <button class="openButton" onclick="openForm()">Create a New Workout Routine</button>
     </p>
 
@@ -223,7 +221,7 @@
 
 <div class="form-popup" id="myForm" style="width:90%;">
 
-  <form action="/action_page.php" class="form-container" >
+  <form action="/routine" action="/routine" method="POST" class="form-container" >
     <h2 style="text-align: center">New Workout Routine</h2>
 
     <br> <br>
@@ -239,34 +237,25 @@
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <div class="checkboxButton">
-                        <input id="workoutID" type="checkbox" name="workoutName" value="{{e.exerciseName}}" />
-                        <img src= {{e.example}} alt="Workout Demo" style="width:150px;height:150px;">
+                        <input id="workoutID" type="checkbox" name="exercise"
+                               value="{{e.exerciseName}}" onchange="getInfo()">
+                        <img src= "{{e.example}}" alt="Workout Demo" style="width:150px;height:150px;">
                         <p class="img_name"  style="font-size:20px; text-align:center;">
                         <br>
                             {{e.exerciseName}}
                         </p>
                     </div>
+                    <input id="numreps" type="number" name="reps" value="">
+                    <input id="numsets" type="number" name="sets"  value="">
                 </div>
-                <!--
-                <div class="flip-card-back">
-                    <br>
-                    <h1>{{e.exerciseName}}</h1>
-                    <br>
-                    <p> Equipment: {{e.equipment}}</p>
-                    <br>
-                    <p>Exercise Type: {{e.exerciseType}}</p>
-                    <br>
-                    <p>Major Muscle: {{e.majorMuscle}}</p>
-                    <br>
-                    <p>Minor Muscle: {{e.minorMuscle}}</p>
-                </div> -->
+
             </div>
         </div>
         {% endfor %}
         </div>
     </p>
-
-    <button type="button" class="btn" id="submitRoutine">Submit</button> <br>
+    <input id="routineName" type="text" name="routineName" value="" style="display:none" />
+    <button type="submit" class="btn" id="submitRoutine" onclick="getName()">Submit</button> <br>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
 
   </form>
@@ -286,7 +275,7 @@
     <p style="text-align: center;">
         <button type="button" class="deleteButton"  id="delete" style="display:show"> Delete </button>
         <button type="button" class="updateButton" id="update" style="display:show"> Update </button>
-        <button type="submit" class="updateButton" id="saveRoutine" style="display:show" onclick="getInfo()"> Save Routine </button>
+        <button type="submit" class="saveButton" id="saveRoutine" style="display:show"> Save Routine </button>
     </p>
 
 </div>
@@ -294,13 +283,21 @@
 
 <script>
 function getInfo() {
-  var workoutName = prompt("Please enter a Workout Name");
-  var workoutID = prompt("Please enter a Workout ID");
-  if (workoutName != null && workoutID != null) {
-    document.getElementById("routineName").innerHTML = workoutName;
-    document.getElementById("routineID").innerHTML = workoutID;
+    var reps = prompt("Please enter the amount of Reps for: ");
+    var sets = prompt("Please enter the amount of Sets for: ");
+  if (reps != null && sets != null) {
+      document.getElementById("numreps").value = reps;
+      document.getElementById("numsets").value = sets;
+
 
   }
+}
+
+function getName() {
+    var workoutName = prompt("Please enter a Workout Name");
+    if (workoutName != null) {
+      document.getElementById("routineName").value = workoutName;
+   }
 }
 
 function openForm() {
